# typer-frankfurter

./: .gitignore  LICENSE  README.md  changelog.md  pyproject.toml  requirements.txt
.github/workflows/: update.yml
cassettes/: japan_call.yaml  tracked_currencies.yaml
tests/: test_japan_2_usd.py  test_yen_2_usd.py
tests/cassettes/: getting_latest  japan_call  tracking_call
typer_frankfurter/: __main__.py  helper.py  main.py  vcr_helper.py  vcr_main.py
typer_frankfurter/cassettes/: tracked_currencies.yaml
